# mensa-bot

./: Cargo.toml  README.md  rustfmt.toml
src/: commands.rs  main.rs
src/mensa/: api.rs  mod.rs
